backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: xowldks1003/fastapi-app:f42693d1e6d76966b9f8b23935c0d38d22f711af
          ports:
            - containerPort: 8000
