frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
        - name: react-frontend
          image: xowldks1003/react-frontend:d62f86ee9cbf28d1b14d46d6015bf1f12243d1a4
          ports:
            - containerPort: 80
